--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <h1>Github pages testi</h1>
+  <h1>Hello i'm Farid Uzzaman. Currently, i'm live in Finland... </h1>
 </body>
 
 </html>
