--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Lapio website</title>
+  <title>Myself</title>
   <link rel="stylesheet" href="styles.css">
   
 </head>
@@ -11,7 +11,7 @@
   <!--Do the exercises here-->
   <h1> Hello </h1>
   <h3> This is my website</h3>
-  <h3 class ="violet"> You can find my other website <a  href="file:///Users/farid/Desktop/Vs%20code/lapio-website/index2.html" STYLE = "color:orange"> here</a></h3>
+  <!--<h3 class ="violet"> You can find my other website <a  href="file:///Users/farid/Desktop/Vs%20code/lapio-website/index2.html" STYLE = "color:orange"> here</a></h3>-->
   <h3 class ="yellow"> <strong>The learning goals for this course are in essence to</strong> </h3>
   <ul> 
     <li class = "red">Learn HTML</li>
@@ -33,7 +33,7 @@
   <p class = "yell">Such as learning <i>HTML</i></p>
   
   <br>
-  <img src="assets/photo_1.jpg" alt="Flower" height="240" width="320"/>
+  <!--<img src="assets/photo_1.jpg" alt="Flower" height="240" width="320"/>-->
   <p class = "yell">Finnish summer with beautiful flower, place in Kokkla, Finland. Taken by Faridzaman.</p>
 
      <i class = "yell"><strong>To be continued...</strong></i>
