--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 
 <body>
   <!--Do the exercises here-->
-  <h1> Hello </h1>
-  <h3> This is my website</h3>
+  
+  <!--<img src="assets/im farid.JPEG" alt="me" height="600" width="500"/>-->
+  <img class="center-fit" src="assets/im farid.JPEG">
+  <br>
+  <h3> Hello, I'm Mohammad Farid Uzzaman.</h3>
+  <hr>
   <!--<h3 class ="violet"> You can find my other website <a  href="file:///Users/farid/Desktop/Vs%20code/lapio-website/index2.html" STYLE = "color:orange"> here</a></h3>-->
   <h3 class ="yellow"> <strong>The learning goals for this course are in essence to</strong> </h3>
   <ul> 
@@ -33,7 +37,7 @@
   <p class = "yell">Such as learning <i>HTML</i></p>
   
   <br>
-  <!--<img src="assets/photo_1.jpg" alt="Flower" height="240" width="320"/>-->
+  
   <p class = "yell">Finnish summer with beautiful flower, place in Kokkla, Finland. Taken by Faridzaman.</p>
 
      <i class = "yell"><strong>To be continued...</strong></i>
