--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--Do the exercises here-->
   
   <!--<img src="assets/im farid.JPEG" alt="me" height="600" width="500"/>-->
-  <img class="center-fit" src="assets/im farid.JPEG">
+  <img class="center-fit" src="assets/im farid.jpg">
   <br>
   <h3> Hello, I'm Mohammad Farid Uzzaman.</h3>
   <hr>
