--- a/index2.html
+++ b/index2.html
@@ -13,13 +13,13 @@
   
   <div class="row">
     <div class="column">
-      <img src="assets/pic/01.jpg" alt="Snow" style="width:100%">
+      <img src="assets/pic/01.jpg" alt="Pic01" style="width:100%">
     </div>
     <div class="column">
-      <img src="assets/pic/02.jpg" alt="Forest" style="width:100%">
+      <img src="assets/pic/02.jpg" alt="Pic02" style="width:100%">
     </div>
     <div class="column">
-      <img src="assets/pic/03.jpg" alt="Mountains" style="width:100%">
+      <img src="assets/pic/03.jpg" alt="Pic03" style="width:100%">
     </div>
 </div>
   <p>My working area was in Kualalumpur. We Installed a water heater system. 
