add 2nd web link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     Joint venture Company established in 1968. They specialize 
     in the manufacturing of all types and sizes of water heaters, 
     ranging from the domestic 3 gallons Unit to the 1,000 gallons 
-    industrial-sized heater. You can find <a  href="file:///Users/farid/Desktop/Myfolder/index2.html" STYLE = "color:gray"> here.</a>  </p>
+    industrial-sized heater. You can find <a  href="https://farid555.github.io/mysite.github.io/" STYLE = "color:gray"> here.</a>  </p>
 </p>
 <h4> EDUCATION </h4>
 <ul>
