--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
      Illustrator, etc. My subject is nature, people, cities, 
      and the sky.  
      <!--The a target attribute-->
-     <a class ="logo" href="https://www.facebook.com/farid.zaman.319/" target="_blank" > <img class="center-fit" src="assets/facebook.png" alt="Facebook" ></a>
-     
+   
 
      
     </div>
@@ -139,7 +138,7 @@
   <button onclick="myFunction()">Try it</button>
   <script>
     function myFunction() {
-      window.open("https://www.w3schools.com");
+      window.open("https://farid555.github.io/farid/");
     }
     </script>
 
