--- a/index.html
+++ b/index.html
@@ -107,6 +107,24 @@
 
     </p>
   </div>
+  <div>
+    <h4>Skills</h4>
+    <li>
+      <a>Electronics Circuit design, testing, troubleshooting, repair etc.</a>
+    </li>
+    <li>
+      <a>Electrical Maintenance.</a>
+    </li>
+    <ul>
+      <b>-System i used</b>
+      <li> <a> Windows (10)</a></li>
+      <li> <a> Linux (Ubuntu)(Mint)</a></li>
+      <li> <a> OS X (Catalina)</a></li>
+
+    </ul>
+
+  </div>
+
   <h4> HOBBIES
   </h4>
   <div>
@@ -117,8 +135,8 @@
       I can create my own websites. I have quite a good experience
       with a <code>Markup language</code>. On the other hand, I like to do photography.
       I have quite good skills in photography. I am good at
-      graphic design softwares like Adobe Photoshop,Adobe
-      Illustrator, Adobe Premiere etc. My photo subjects are nature, people, cities,
+      graphic design softwares like <b>Adobe Photoshop, Adobe
+        Illustrator, Adobe Premiere </b>etc. My photo subjects are nature, people, cities,
       and the sky.
       <!--The a target attribute-->
 
@@ -129,16 +147,17 @@
   <section>
     <h3>Social</h3>
 
-    <li> <a class="paralink" style="text-decoration:none" href="https://www.facebook.com/farid.zaman.319/"
-        target="_blank">Facebook</a></li>
-    <li> <a class="paralink" style="text-decoration:none" href="https://github.com/farid555/farid"
-        target="_blank">Instagram</a></li>
-    <li> <a class="paralink" style="text-decoration:none" href="https://github.com/farid555" target="_blank">Github</a>
-    </li>
+    <ul>
+
+      <li> <a class="paralink" style="text-decoration:none" href="https://www.facebook.com/farid.zaman.319/"
+          target="_blank">Facebook</a></li>
+      <li> <a class="paralink" style="text-decoration:none" href="https://github.com/farid555/farid"
+          target="_blank">Instagram</a></li>
+      <li> <a class="paralink" style="text-decoration:none" href="https://github.com/farid555/farid"
+          target="_blank">Github</a></li>
 
     </ul>
-
-
+  </section>
 
 </body>
 
