--- a/index.html
+++ b/index.html
@@ -120,7 +120,15 @@
       <li> <a> Windows (10)</a></li>
       <li> <a> Linux (Ubuntu)(Mint)</a></li>
       <li> <a> OS X (Catalina)</a></li>
+      <br>
 
+      <b>-My IT technical skills</b>
+
+      <li> <a> Computer networking and technical support</a></li>
+      <li> <a> Coding skills HTML • CSS • JavaScript • MySQL • MongoDB • PostgreSQL • React </a></li>
+      <li> <a> Ability to Monitor processing functions, install relevant software amd perform tests on Computer
+          equipment and application when it's necessary.</a></li>
+      <li> <a>Computer Graphics & Multimedia.</a></li>
     </ul>
 
   </div>
@@ -136,8 +144,8 @@
       with a <code>Markup language</code>. On the other hand, I like to do photography.
       I have quite good skills in photography. I am good at
       graphic design softwares like <b>Adobe Photoshop, Adobe
-        Illustrator, Adobe Premiere </b>etc. My photo subjects are nature, people, cities,
-      and the sky.
+        Illustrator, Adobe Premiere </b>etc. My photo's subjects are nature, people, cities,
+      and the beautiful sky.
       <!--The a target attribute-->
 
 
@@ -149,10 +157,8 @@
 
     <ul>
 
-      <li> <a class="paralink" style="text-decoration:none" href="https://www.facebook.com/farid.zaman.319/"
-          target="_blank">Facebook</a></li>
-      <li> <a class="paralink" style="text-decoration:none" href="https://github.com/farid555/farid"
-          target="_blank">Instagram</a></li>
+      <li> <a class="paralink" style="text-decoration:none"
+          href="https://www.linkedin.com/in/mohammad-uzzaman-b4a0421b8/" target="_blank">linkedin</a></li>
       <li> <a class="paralink" style="text-decoration:none" href="https://github.com/farid555/farid"
           target="_blank">Github</a></li>
 
