--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
   </div>
   <div>
-    <p class="para1">An organised, detail-oriented, and conscientious self-starter,
-      able to strategise and prioritise effectively to accomplish multiple
-      tasks and stay calm under pressure. Skilled in enlisting the support of
-      all team members in aligning with a project and organisational goals.
+    <p class="para1">An organized, detail-oriented, and conscientious self-starter,
+      able to strategize and prioritize effectively to accomplish multiple tasks
+      and stay calm under pressure. Skilled in enlisting the support of all team
+      members in aligning with a project and organizational goals.
     </p>
     <br>
   </div>
