--- a/index.html
+++ b/index.html
@@ -136,20 +136,14 @@
   <h4> HOBBIES
   </h4>
   <div>
-    <p class="para2">My favorite hobby is create a website designing.
-      I enjoy making a new website and learn about new
-      staff regarding <code>HTML</code> and <code>CSS</code> and <code>JavaScript</code>
-      code. My free time i like to learning code. I enjoy coding because
-      I can create my own websites. I have quite a good experience
-      with a <code>Markup language</code>. On the other hand, I like to do photography.
-      I have quite good skills in photography. I am good at
-      graphic design softwares like <b>Adobe Photoshop, Adobe
-        Illustrator, Adobe Premiere </b>etc. My photo's subjects are nature, people, cities,
-      and the beautiful sky.
+    <p class="para2">As a technical person, I love to spend time with all kinds of technical stuff.
+      I am willing to work flexible hours. Once I know why it works,
+      I can understand how it works. Once I know how it works,
+      I no longer need training in how to use it. My knowledge
+      base always grows whenever I troubleshoot something new.
+
+
       <!--The a target attribute-->
-
-
-
   </div>
   <!--<div class="bottomAnim"></div>-->
   <section>
