--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
   </div>
 
-  <h4> HOBBIES
+  <h4> Abilities
   </h4>
   <div>
     <p class="para2">As a technical person, I love to spend time with all kinds of technical stuff.
@@ -141,6 +141,7 @@
       I can understand how it works. Once I know how it works,
       I no longer need training in how to use it. My knowledge
       base always grows whenever I troubleshoot something new.
+      It gives me more confidence to work happily.
 
 
       <!--The a target attribute-->
