--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
       <li> <a class="paralink" style="text-decoration:none"
           href="https://www.linkedin.com/in/mohammad-uzzaman-b4a0421b8/" target="_blank">linkedin</a></li>
-      <li> <a class="paralink" style="text-decoration:none" href="https://github.com/farid555/farid"
+      <li> <a class="paralink" style="text-decoration:none" href="https://github.com/farid555"
           target="_blank">Github</a></li>
 
     </ul>
